Dando prosseguimento no projeto e algumas alterações estétivas

--- a/form/fomrDelEve.html
+++ b/form/fomrDelEve.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Login Agenda Eventos</title>
+    <title>Apagar Evento</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
@@ -19,13 +19,16 @@
 
     <div class="container">
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Login</h2>
-        <label for="inputUser" class="sr-only">Usuário</label>
-        <input type="text" id="inputEmail" class="form-control" placeholder="Usuário" required autofocus>
-        <label for="inputPassword" class="sr-only">Senha</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+      <form>
+        <div>
+          <label for="button">Selecione a Data</label>
+          <div>
+            <input type="date" id="seleDateDel">
+          </div>
+        </div>
+        <div>
+          <button type="submit" class="btn btn-primary">Apagar</button>
+        </div>
       </form>
 
     </div> <!-- /container -->
