--- a/form/formEdEve.html
+++ b/form/formEdEve.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Login Agenda Eventos</title>
+    <title>Editar Evento</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
@@ -18,14 +18,19 @@
   <body>
 
     <div class="container">
-
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Login</h2>
-        <label for="inputUser" class="sr-only">Usuário</label>
-        <input type="text" id="inputEmail" class="form-control" placeholder="Usuário" required autofocus>
-        <label for="inputPassword" class="sr-only">Senha</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+      
+      <form>
+        <div>
+          <label for="button">Selecione a Data</label>
+          <div>
+            <input type="date" id="seleDataEdt">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="txtArea">Escreva uma nova Descrição do Evento</label>
+          <textarea class="form-control" id="txtAreaEdt" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Editar</button>
       </form>
 
     </div> <!-- /container -->
