Adicionei um mísero comentário

--- a/user/login/login.html
+++ b/user/login/login.html
@@ -18,8 +18,9 @@
   <body>
 
     <div class="container">
-
-      <form method="post" action="/calendario-eventos-cs2017-2/menu/menu.php" 
+      <!-- Os dados do login são enviados para o menu.php para ser realizada
+      a validação dos dados -->
+      <form method="post" action="/calendario-eventos-cs2017-2/menu/menu.php"
 
       class="form-signin">
         <h2 class="form-signin-heading">Login</h2>
