Fixed absolute paths in html files

--- a/app/public/form/formCreaEve.html
+++ b/app/public/form/formCreaEve.html
@@ -9,17 +9,17 @@
     <title>Cadastro de Evento</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/calendario-eventos-cs2017-2/css/signin.css" rel="stylesheet">
+    <link href="../css/signin.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container">
       <p>
-      <form method="post" action="/calendario-eventos-cs2017-2/php/adciEvent.php">
+      <form method="post">
         <div>
 
           <label for="button">Selecione a Data de Início do Evento</label>
