--- a/app/public/form/formDelEve.html
+++ b/app/public/form/formDelEve.html
@@ -9,10 +9,10 @@
     <title>Apagar Evento</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/calendario-eventos-cs2017-2/css/signin.css" rel="stylesheet">
+    <link href="../css/signin.css" rel="stylesheet">
   </head>
 
   <body>
