--- a/app/public/form/formEdEve.html
+++ b/app/public/form/formEdEve.html
@@ -9,16 +9,16 @@
     <title>Editar Evento</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/calendario-eventos-cs2017-2/css/signin.css" rel="stylesheet">
+    <link href="../css/signin.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container">
-      
+
       <form>
         <div>
           <label for="button">Selecione a Data</label>
