--- a/app/public/menu/menu.html
+++ b/app/public/menu/menu.html
@@ -9,25 +9,25 @@
     <title>Opções de Eventos</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/calendario-eventos-cs2017-2/css/signin.css" rel="stylesheet">
+    <link href="../css/signin.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container">
       <center>
-        <a class="btn btn-primary" href="/calendario-eventos-cs2017-2/form/formCreaEve.html"
+        <a class="btn btn-primary" href="../form/formCreaEve.html"
           role="button">Adicionar Evento</a>
         <br>
         <br>
-        <a class="btn btn-warning" href="/calendario-eventos-cs2017-2/form/formEdEve.html"
+        <a class="btn btn-warning" href="../form/formEdEve.html"
             role="button">Alterar Evento</a>
         <br>
         <br>
-        <a class="btn btn-danger" href="/calendario-eventos-cs2017-2/form/formDelEve.html"
+        <a class="btn btn-danger" href="../form/formDelEve.html"
             role="button">Apagar Evento</a>
         <br>
         <br>
