--- a/app/public/user/login/login.html
+++ b/app/public/user/login/login.html
@@ -9,20 +9,17 @@
     <title>Login Agenda Eventos</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/calendario-eventos-cs2017-2/css/signin.css" rel="stylesheet">
+    <link href="../../css/signin.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container">
-      <!-- Os dados do login são enviados para o menu.php para ser realizada
-      a validação dos dados -->
-      <form method="post" action="/calendario-eventos-cs2017-2/menu/menu.php"
-
-      class="form-signin">
+      <!-- Os dados do login são enviados para o menu.php para ser realizada a validação dos dados -->
+      <form method="post" class="form-signin">
         <h2 class="form-signin-heading">Login</h2>
         <label for="inputUser" class="sr-only">Usuário</label>
         <input type="text" name="nomeLogin" id="inputEmail" class="form-control" placeholder="Usuário" required autofocus>
