--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,42 +10,43 @@
     <title>Login ou Cadastro</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/calendario-eventos-cs2017-2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/calendario-eventos-cs2017-2/css/signin.css" rel="stylesheet">
+    <link href="./css/signin.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container">
 
-    <form  class="form-signin">
+      <form class="form-signin">
 
-      <div>
-      Fazer Login ou Cadastrar(Caso novo usuário)
-      </div>
+        <div>
+          Fazer Login ou Cadastrar(Caso novo usuário)
+        </div>
         <br>
-      <div >
-      <input value="Login" class="btn btn-lg btn-primary btn-block" type="button" name="pagLogin"
-      onclick="javascript: location.href='/calendario-eventos-cs2017-2/user/login/login.html';">
-      </div>
+        <div>
+          <input value="Login" class="btn btn-lg btn-primary btn-block" type="button" name="pagLogin" onclick="javascript: location.href='./user/login/login.html';">
+        </div>
         <br>
-      <div>
-        <input value="Fazer Cadastro" class="btn btn-lg btn-primary btn-block" type="button" name="fazerCad"
-        onclick="javascript: location.href='/calendario-eventos-cs2017-2/user/cadastro/cadastro.html';">
-      <div>
+        <div>
+          <input value="Fazer Cadastro" class="btn btn-lg btn-primary btn-block" type="button" name="fazerCad"
+            onclick="javascript: location.href='./user/cadastro/cadastro.html';">
+        </div>
 
-    </form>
-
-
-    </div> <!-- /container -->
+      </form>
 
 
-          <!-- Bootstrap core JavaScript
+    </div>
+    <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
           ================================================== -->
-          <!-- Placed at the end of the document so the pages load faster -->
-          <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-          <script src="ie10-viewport-bug-workaround.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="ie10-viewport-bug-workaround.js"></script>
   </body>
+
 </html>
