Alguns pequenos ajustes front-end

--- a/app/public/form/formDelEve.html
+++ b/app/public/form/formDelEve.html
@@ -21,9 +21,14 @@
 
       <form>
         <div>
-          <label for="button">Selecione a Data</label>
+          <label for="button">Selecione a Data de Início do Evento</label>
           <div>
-            <input type="date" id="seleDateDel">
+            <input type="date" name="dataCadastroInicial" id="seleDataCadInicial">
+          </div>
+
+          <label for="button">Selecione a Data do último dia do Evento</label>
+          <div>
+            <input type="date" name="dataCadastroFinal" id="seleDataCadFinal">
           </div>
         </div>
           <br>
