--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
 
   <link href="./lib/bootstrap.css" rel="stylesheet">
   <link href="./lib/fullcalendar.css" rel="stylesheet">
+  <link href="./css/main.css" rel="stylesheet">
 
   <script type="application/javascript">
     $(() => {
@@ -51,7 +52,7 @@
 </nav>
 
 <div class="container">
-  <h1>Calendário</h1>
+  <h1 class="template__titulo">Calendário</h1>
   <div class="calendario"></div>
 </div>
 </body>
