Implementada fuxo de apagar Evento

--- a/src/main/resources/static/eventos/detalhes-evento.html
+++ b/src/main/resources/static/eventos/detalhes-evento.html
@@ -11,24 +11,52 @@
   <script src="../lib/jquery-3.2.1.js"></script>
 
   <link href="../lib/bootstrap.css" rel="stylesheet">
+  <link href="../lib/octicons.css" rel="stylesheet">
   <link href="../css/main.css" rel="stylesheet">
 
+  <style>
+    .icon-padding {
+      padding-right: 1em;
+    }
+  </style>
+
   <script>
+    const redirectHome = () => window.location.replace('../index.html');
+
     const searchParams = new URLSearchParams(window.location.search);
     const eventoId = Number(searchParams.get('id'));
 
     if (!eventoId) {
       window.alert('Id passado inválido');
+      redirectHome();
     }
 
-    $(() => {
-      $.getJSON(`../api/eventos/${eventoId}`).then((evento) => {
+    $.getJSON(`../api/eventos/${eventoId}`).then((evento) => {
+      $(() => {
         $('#evento-titulo').text(evento.titulo);
         $('#evento-descricao').text(evento.descricao);
-        $('#evento-data').text(new Date(evento.data).toLocaleDateString());
-      }).catch((err) => {
-        console.error(err);
-        window.alert('Evento com identificador passado não existe');
+
+        const data = new Date(evento.data);
+
+        $('#evento-data').text(`${data.toLocaleDateString()} - ${data.toLocaleTimeString()}`);
+      });
+    }).catch((err) => {
+      console.error(err);
+      window.alert('Evento com identificador passado não existe');
+      redirectHome();
+    });
+
+    $(() => {
+      $('#btn-apagar').on('click', () => {
+        $.ajax(`../api/eventos/${eventoId}`, {
+          method: 'DELETE',
+        }).then(() => {
+          window.alert('Evento apagado com sucesso');
+          redirectHome();
+        }).catch(() => {
+          window.alert('Houve um erro ao apagar o evento. Por favor tente mais tarde.');
+          redirectHome();
+        });
       });
     })
   </script>
@@ -59,6 +87,22 @@
 
   <div><strong>Descrição:</strong></div>
   <p id="evento-descricao"></p>
+
+  <div>
+    <button id="btn-editar" class="btn btn-primary">
+      <svg class="icon-padding octicon octicon-pencil" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true">
+        <path fill-rule="evenodd" d="M0 12v3h3l8-8-3-3-8 8zm3 2H1v-2h1v1h1v1zm10.3-9.3L12 6 9 3l1.3-1.3a.996.996 0 0 1 1.41 0l1.59 1.59c.39.39.39 1.02 0 1.41z"></path>
+      </svg>
+      Editar
+    </button>
+
+    <button id="btn-apagar" class="btn btn-danger">
+      <svg class="icon-padding octicon octicon-trashcan" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true">
+        <path fill-rule="evenodd" d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"></path>
+      </svg>
+      Apagar
+    </button>
+  </div>
 </div>
 </body>
 </html>
