--- a/src/main/resources/static/eventos/adicionar-evento.html
+++ b/src/main/resources/static/eventos/adicionar-evento.html
@@ -62,7 +62,7 @@
 
     <div class="form-group">
       <label for="evento-data">Data:</label>
-      <input required class="form-control" type="date" id="evento-data">
+      <input required class="form-control" type="datetime-local" id="evento-data">
     </div>
 
     <div class="form-group">
