--- a/src/main/resources/static/eventos/adicionar-evento.html
+++ b/src/main/resources/static/eventos/adicionar-evento.html
@@ -42,7 +42,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">Calendário</a>
+  <a class="navbar-brand" href="../index.html">Calendário</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="../index.html">Visualizar calendário</a>
