--- a/src/main/resources/static/eventos/editar-evento.html
+++ b/src/main/resources/static/eventos/editar-evento.html
@@ -33,12 +33,13 @@
 
     $.getJSON(`../api/eventos/${eventoId}`).then((evento) => {
       $(() => {
-        $('#evento-titulo').text(evento.titulo);
-        $('#evento-descricao').text(evento.descricao);
+        $('#evento-titulo').val(evento.titulo);
+        $('#evento-descricao').val(evento.descricao);
 
         const data = new Date(evento.data);
+        const dataFormatada = data.toISOString().replace(/Z$/, '');
 
-        $('#evento-data').text(`${data.toLocaleDateString()} - ${data.toLocaleTimeString()}`);
+        $('#evento-data').val(dataFormatada);
       });
     }).catch((err) => {
       console.error(err);
@@ -47,26 +48,25 @@
     });
 
     $(() => {
-      $('#btn-apagar').on('click', () => {
-        const confirmacao = window.confirm('Tem certeza que deseja apagar esse evento?\nEssa ação não poderá ser desfeita');
+      $('#form-editar-evento').on('submit', (event) => {
+        event.preventDefault();
 
-        if (!confirmacao) {
-          return;
-        }
+        const evento = {
+          titulo   : $('#evento-titulo').val(),
+          descricao: $('#evento-descricao').val(),
+          data     : new Date($('#evento-data').val()),
+        };
 
         $.ajax(`../api/eventos/${eventoId}`, {
-          method: 'DELETE',
+          method     : 'PUT',
+          data       : JSON.stringify(evento),
+          contentType: 'application/json; charset=UTF-8',
         }).then(() => {
-          window.alert('Evento apagado com sucesso');
+          window.alert('Evento alterado com sucesso!');
           redirectHome();
         }).catch(() => {
-          window.alert('Houve um erro ao apagar o evento. Por favor tente mais tarde.');
-          redirectHome();
-        });
-      });
-
-      $('#btn-editar').on('click', () => {
-        window.location.replace(`./editar-evento.html?id=${eventoId}`);
+          window.alert('Houve um erro ao salvar o evento. Por favor tente mais tarde.');
+        })
       });
     })
   </script>
@@ -87,32 +87,27 @@
 </nav>
 
 <div class="container">
-  <h1 class="template__titulo">Detalhes do evento</h1>
+  <h1 class="template__titulo">Editar evento</h1>
 
-  <div><strong>Título:</strong></div>
-  <p id="evento-titulo"></p>
+  <form id="form-editar-evento">
+    <div class="form-group">
+      <label for="evento-titulo">Título:</label>
+      <input required class="form-control" type="text" id="evento-titulo">
+    </div>
 
-  <div><strong>Data:</strong></div>
-  <p id="evento-data"></p>
+    <div class="form-group">
+      <label for="evento-data">Data:</label>
+      <input required class="form-control" type="datetime-local" id="evento-data">
+    </div>
 
-  <div><strong>Descrição:</strong></div>
-  <p id="evento-descricao"></p>
+    <div class="form-group">
+      <label for="evento-descricao">Descrição: </label>
+      <textarea required class="form-control" rows="4" id="evento-descricao"></textarea>
+    </div>
 
-  <div>
-    <button id="btn-editar" class="btn btn-primary">
-      <svg class="icon-padding octicon octicon-pencil" viewBox="0 0 14 16" version="1.1" width="14" height="16" aria-hidden="true">
-        <path fill-rule="evenodd" d="M0 12v3h3l8-8-3-3-8 8zm3 2H1v-2h1v1h1v1zm10.3-9.3L12 6 9 3l1.3-1.3a.996.996 0 0 1 1.41 0l1.59 1.59c.39.39.39 1.02 0 1.41z"></path>
-      </svg>
-      Editar
-    </button>
-
-    <button id="btn-apagar" class="btn btn-danger">
-      <svg class="icon-padding octicon octicon-trashcan" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true">
-        <path fill-rule="evenodd" d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"></path>
-      </svg>
-      Apagar
-    </button>
-  </div>
+    <button class="btn btn-primary" type="submit">Editar</button>
+    <button class="btn btn-danger" type="reset">Limpar</button>
+  </form>
 </div>
 </body>
 </html>
