--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,13 +21,13 @@
   <script type="application/javascript">
     $(() => {
       $('.calendario').fullCalendar({
+        timeFormat: 'HH:mm',
 
         events(start, end, timezone, callback) {
           $.getJSON('./api/eventos').then((eventos) => {
             const fullCalendarEvents = eventos.map(evento => ({
               apiId : evento.id,
               title : evento.titulo,
-              allDay: true,
               start : new Date(evento.data),
             }));
 
@@ -38,7 +38,6 @@
         eventClick(calendarEvent) {
           window.location.replace(`./eventos/detalhes-evento.html?id=${Number(calendarEvent.apiId)}`)
         },
-
       });
     });
   </script>
@@ -49,7 +48,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">Calendário</a>
+  <a class="navbar-brand" href="">Calendário</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active">Visualizar calendário <span class="sr-only">(atual)</span></a>
